# fastapi-sunset

./: .gitignore  .gitlint  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: check_code_style.yaml  check_pr_style.yaml  test_code.yaml
src/fastapi_sunset/: __init__.py  _version_manager.py  configuration.py  sunset.py
src/fastapi_sunset/behaviors/: __init__.py  base.py  do_nothing.py  error.py  redirect.py  warn.py
tests/: test_behaviors.py  test_sunset.py  test_sunset_configuration.py  test_version.py
